add copy notification, fix gap

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
     <div class="footer-content">
       <h2>Get in touch</h2>
       <a href="https://www.linkedin.com/in/anna-kozhevnikova/" target="_blank">LinkedIn</a>
-      <a id="emailCopy" onclick="copy()">
+      <a id="emailCopy">
         <span class="tooltiptext" id="tooltip"></span>
-        hi@annakozh.com
+        Email me
       </a>
     </div>
   </footer>
@@ -23,19 +23,21 @@
                 portfolioLink.classList.remove("selected");
         }
     })
-
-    function copy() {
-      let copyText = document.getElementById("emailCopy").innerText;
-      navigator.clipboard.writeText(copyText);
-
+    
+    document.getElementById('emailCopy').addEventListener('click', async () => {
+      let popupVisible = false;
       let tooltip = document.getElementById("tooltip");
-      tooltip.innerHTML = "Copied";
-      tooltip.style.display = "block";
+        tooltip.classList.add('show');
+        popupVisible = true;
+        navigator.clipboard.writeText('hi@annakozh.com ');
+        tooltip.innerText = "Email copied to clipboard.";
+
       setTimeout(
         function () {
-          tooltip.style.display = "none";
-        }, 2000)
-    }
+          tooltip.classList.remove('show');
+          popupVisible = false;
+        }, 3000)
+  });
   </script>
 </body>
 </html>
