Added Branding tool article v1

--- a/_includes/under-construction.html
+++ b/_includes/under-construction.html
@@ -12,7 +12,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
-      background: url(../assets/images/pattern.webp) repeat;
+      background: url(../assets/images/pattern.png) repeat;
       background-size: 60px;
       background-color: #00000003;
       margin: 0;
