--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,6 +23,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.3rem;
 }
 
 #container {
@@ -98,7 +99,7 @@ h4 {
 }
 
 p.description {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 400;
   line-height: 2rem;
   border-left: 2px solid var(--primary-color);
@@ -533,6 +534,38 @@ span {
   width: max-content;
 }
 
+.callout {
+  display: flex;
+  gap: 1rem;
+  padding: 1.5rem 0;
+}
+
+.callout::before {
+  content: "";
+  min-width: 2rem;
+  height: 3rem;
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-self: start;
+  background-position-y: top;
+}
+
+.thought::before {
+  background-image: url(../uploads/thought.svg);
+}
+
+.idea::before {
+  background-image: url(../uploads/idea.svg);
+}
+
+.feedback::before {
+  background-image: url(../uploads/feedback.svg);
+}
+
+.message::before {
+  background-image: url(../uploads/message.svg);
+}
+
 footer {
   position: static;
   display: flex;
@@ -614,7 +647,8 @@ footer {
   }
 
   #singlePost img {
-    max-width: 100%;
+    width: 100%;
+    object-fit: contain;
   }
 }
 
@@ -634,7 +668,7 @@ footer {
   }
 
   .download {
-    background-position: 4rem 0.2rem;
+    background-position: 5rem 0.4rem;
   }
 
   .footer-content {
