--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -249,6 +249,7 @@ a:visited,
   border-bottom: 1px solid var(--primary-color);
   text-decoration: none;
   font-weight: 700;
+  font-size: 1rem;
 }
 
 a:hover {
@@ -668,7 +669,7 @@ footer {
   }
 
   .download {
-    background-position: 5rem 0.4rem;
+    background-position: 4rem 0.2rem;
   }
 
   .footer-content {
