--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,6 +18,7 @@
 html {
   box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -217,6 +218,10 @@ figure {
   list-style: none;
   justify-content: space-between;
   max-width: 1312px;
+}
+
+menu {
+  all: unset;
 }
 
 .nav_links {
@@ -628,9 +633,45 @@ footer {
   opacity: 1;
 }
 
+#scroll-up-parent {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  color: var(--primary-color);
+  font-size: 1rem;
+  line-height: 2rem;
+  z-index: 1;
+}
+
+#scroll-up-link {
+  display: block;
+  padding: 1.5rem;
+  background: var(--primary-color);
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+
+#scroll-up{
+  border: 1px solid var(--white);
+  border-width: 0 0 2px 2px;
+  width: 10px;
+  height: 10px;
+  transform: rotate(135deg) translateY(-2px) translateX(2px);
+}
+
+#scroll-up-parent:hover #scroll-up-link {
+  background-color: var(--white);
+  border-color: var(--primary-color);
+}
+#scroll-up-parent:hover #scroll-up {
+  border-color: var(--primary-color);
+}
+
 /* MEDIA QUERIES */
 @media only screen and (min-width: 729px) {
-
   .nav,
   .footer-content {
     padding: 32px 48px 24px 48px;
@@ -651,10 +692,17 @@ footer {
     width: 100%;
     object-fit: contain;
   }
+
+  #scroll-up-parent:hover #scroll-up-link {
+    background-color: var(--primary-color);
+    border-color: var(--white);
+  }
+  #scroll-up-parent:hover #scroll-up {
+    border-color: var(--white);
+  }
 }
 
 @media only screen and (max-width: 728px) and (min-width: 531px) {
-
   .nav,
   .footer-content {
     padding: 32px 24px 24px 24px;
