split hotjar and google and attach hotjar at the end

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <link rel="icon" sizes="32x32" type="image/png" href="{{site.baseurl}}/assets/images/favicon32x32.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
 </head>
-{% include analytics.html %}
+{% include google.html %}
 <body>
     <div id="scroll-up-parent">
         <a id="scroll-up-link" href="#">
