--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
     </div>
   </footer>
 </div>
+  {% include hotjar.html %}
   <script>
     window.addEventListener("load", function() {
         let getPage = window.location.pathname;
