--- a/_includes/hotjar.html
+++ b/_includes/hotjar.html
@@ -1,7 +1,5 @@
 {% if jekyll.environment != "development" %}
-<!-- Insert Google Analytics and Hotjar tracking code -->
-
-    <!-- Hotjar Tracking Code -->
+    <!-- Insert Hotjar Tracking Code -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -11,14 +9,5 @@
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJJCJPXX0M"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());   
-      gtag('config', 'G-WJJCJPXX0M');
     </script>
 {% endif %}
