--- a/_includes/under-construction.html
+++ b/_includes/under-construction.html
@@ -37,11 +37,12 @@
     }
   </style>
 </head>
-{% include analytics.html %}
+{% include google.html %}
 <body>
 <div class="container">
   <h1>Under Construction</h1>
   <p>We're working hard to bring you something awesome. Stay tuned!</p>
 </div>
+{% include hotjar.html %}
 </body>
 </html>
