add iOS and android highlight color fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -245,6 +245,11 @@ menu {
   background-position: 4rem .75rem;
 }
 
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
+}
+
 a,
 a:visited,
 .more {
