--- a/_layouts/single_post.html
+++ b/_layouts/single_post.html
@@ -8,7 +8,7 @@
             {% assign formattedDate = page.date | date: "%d %b %Y" | upcase %}
             <span>{{formattedDate}}</span>
             <span>{{page.time}} READ</span>
-            <span class="post_type">{{page.tag}}</span>
+            <span class="post-type">{{page.tag}}</span>
         </div>
         <h1>{{page.title}}</h1>
         <p class="description">{{page.description}}</p>
