--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,8 +5,8 @@
   --secondary-text-color: #7B7B7B;
   --scroll-track: #00000016;
   --white: #fff;
-  --primary-font: system-ui, sans-serif;
   --light-grey: #EEE5E9;
+  --primary-font:"Inter";
 }
 
 *,
@@ -15,30 +15,50 @@
   box-sizing: inherit;
 }
 
+
+@font-face {
+  font-display: auto;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/inter-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/inter-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */}
+
+@font-face {
+  font-display: auto;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  src: 
+       url('../fonts/inter-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/inter-700.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+}
+
+@font-face {
+  font-display: auto;
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 400;
+  src: 
+       url('../fonts/inter-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('../fonts/inter-italic.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+}
+
+
 html {
   box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 1.3rem;
-}
-
 #container {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
   position: relative;
   min-height: 100vh;
   background-color: var(--white);
   background: url(../images/pattern.png) repeat;
-  font-family: system-ui;
-  color: var(--primary-text-color);
   background-size: 60px;
 }
 
@@ -66,63 +86,78 @@ body {
   background: var(--secondary-text-color);
 }
 
-h1,
-h2,
-h3,
-h4 {
-  font-family: var(--primary-font);
+body {
   margin: 0;
+  padding: 0;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  letter-spacing: -0.020625rem;
+  font-family: var(--primary-font);
+  color: var(--primary-text-color);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 h1 {
   font-size: 2.625rem;
+  line-height: 3rem;;
+  font-family: var(--primary-font);
   font-weight: 900;
 }
 
 h2 {
   font-size: 2rem;
+  line-height: 3rem;
+  font-family: var(--primary-font);
   font-weight: 900;
+  margin: 4rem 0 1rem;
 }
 
 h3 {
   font-size: 1.4rem;
-  font-weight: 400;
+  font-family: var(--primary-font);
   line-height: 2rem;
 }
 
 h4 {
   color: var(--primary-color);
   font-size: 0.75rem;
-  font-weight: 700;
+  line-height: 1rem;
+  letter-spacing: 0.333px;
   text-transform: uppercase;
+  margin: 1rem 0 0.3rem;
 }
 
 p.description {
-  font-size: 1.3rem;
-  font-weight: 400;
-  line-height: 2rem;
   border-left: 2px solid var(--primary-color);
   padding-left: 2rem;
-  margin: 24px 0;
   text-indent: 0 !important;
 }
 
+figcaption{
+  margin-top:1rem;
+  font-size:1rem;
+  font-family: var(--primary-font);
+  font-style: italic;
+}
+
+figcaption a {
+  margin-left: 0.3rem;
+}
+
 p {
-  margin: 0;
-  font-size: 1.3rem;
-  font-weight: 400;
-  line-height: 2rem;
-  margin: 24px 0;
+  margin: 1rem 0;
 }
 
 .project-overview p {
   text-indent: 0 !important;
-  margin: 0;
-  margin-top: .25rem;
+  margin-bottom: 2rem;
+  margin-top:0;
 }
 
-.overview-item {
-  margin-bottom: 2.5rem;
+.overview-item:last-child p {
+  margin-bottom: 0;
 }
 
 .full-width-section {
@@ -132,8 +167,8 @@ p {
   margin-top: 3rem;
   padding-left: 100vw;
   padding-right: 100vw;
-  padding-top: 3rem;
-  padding-bottom: 1.5rem;
+  padding-top: 1rem;
+  padding-bottom: 3.5rem;
 }
 
 .full-width-section>* {
@@ -155,23 +190,29 @@ p {
 }
 
 strong {
-  font-weight: 900;
+  font-family: var(--primary-font);
+  font-weight: 700;
 }
 
-.primary {
+.italic {
+  font-family: var(--primary-font);
+  font-style: italic;
+}
+
+/* .primary {
   background-color: var(--white);
   color: #fff;
-}
+} */
 
-.small {
+/* .small {
   font-size: .5rem;
-}
+} */
 
 #singlePost {
   max-width: 780px;
   text-align: left;
   align-self: center;
-  margin: 0 24px;
+  /* margin: 0 24px; */
 }
 
 #singlePost p {
@@ -182,7 +223,7 @@ figure {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  margin: 0;
+  margin: 3rem 0;
   text-align: center;
 }
 
@@ -199,7 +240,9 @@ figure {
   align-items: center;
   color: var(--secondary-text-color);
   text-transform: uppercase;
+  font-family: var(--primary-font);
   font-size: 1rem;
+
 }
 
 .navbar {
@@ -242,7 +285,7 @@ menu {
 .download {
   background: url(../images/download.png) no-repeat;
   background-size: 1rem;
-  background-position: 4rem .75rem;
+  background-position: 4.2rem .75rem;
 }
 
 a {
@@ -253,11 +296,13 @@ a {
 a,
 a:visited,
 .more {
-  color: var(--primary-text-color);
   border-bottom: 1px solid var(--primary-color);
   text-decoration: none;
+  font-family: var(--primary-font);
   font-weight: 700;
   font-size: 1rem;
+  line-height: 1.3rem;
+  color: var(--primary-text-color);
 }
 
 a:hover {
@@ -282,11 +327,14 @@ a:hover {
   justify-content: center;
 }
 
-.post_type {
+.post-type {
   border-radius: 13px;
-  background-color: var(--secondary-color);
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height:16px;
   color: var(--primary-text-color);
-  padding: .25rem .5rem !important;
+  background-color: var(--secondary-color);
+  padding: .3rem .6rem !important;
   width: max-content;
   text-transform: none;
 }
@@ -371,7 +419,7 @@ span {
   display: block;
 }
 
-#back_image h1 {
+/* #back_image h1 {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -381,7 +429,7 @@ span {
   color: #000;
   background: #CDE79980;
   padding: 15px;
-}
+} */
 
 .block {
   max-width: 780px;
@@ -443,14 +491,19 @@ span {
   font-weight: inherit;
 }
 
+#post-container h2 {
+  margin: 0;
+}
+
 #post-container .post-content .desc {
-  font-size: 1.4rem;
+  font-family: var(--primary-font);
+  font-size: 1.25rem;
+  line-height: 1.875rem;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-weight: 400;
 }
 
 #post-container .post-content .info {
@@ -502,8 +555,8 @@ span {
 #pastExperiences {
   display: flex;
   flex-direction: column;
-  gap: 6.5rem;
-  max-width: 679px;
+  gap: 6rem;
+  max-width: 780px;
   margin: 0 24px;
   width: 100%;
 }
@@ -522,25 +575,42 @@ span {
   width: 130px;
 }
 
+.xpTitle {
+  margin: 0;
+}
+
+.xpText {
+  margin: 0 0 1rem;
+
+}
+
 .xpLink {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.7rem;
   padding: 0;
   margin: 0;
 }
 
 .xpLink li {
   background: url(../images/case_study.png) no-repeat;
-  background-size: auto 16px;
-  background-position-y: bottom;
+  background-size: auto 1rem;
+  background-position-y: 2px;
   position: relative;
+  list-style-type: none;
+  padding-left: 2rem;
+  margin:0;
 }
 
 .xpLink li a {
-  margin-left: 1.5rem;
+  border-bottom: 1px solid var(--primary-color);
+    font-size: 1rem;
+    line-height: 1rem;
+    vertical-align: top;
 }
+
+
 
 .more {
   width: max-content;
@@ -550,6 +620,8 @@ span {
   display: flex;
   gap: 1rem;
   padding: 1.5rem 0;
+  font-family: var(--primary-font);
+  font-style: italic;
 }
 
 .callout::before {
@@ -581,10 +653,14 @@ span {
 footer {
   position: static;
   display: flex;
-  margin-top: auto;
+  margin-top: 3rem;
   background: #fff;
   border-top: 1px solid #E4E4E4;
   justify-content: center;
+}
+
+footer h2 {
+  margin:0 0 1rem;
 }
 
 .footer-content {
@@ -602,6 +678,7 @@ footer {
 .footer-content a {
   width: min-content;
   text-wrap: nowrap;
+  
 }
 
 .footer-content a:first-of-type::after {
@@ -611,7 +688,7 @@ footer {
   width: 16px !important;
   height: 16px !important;
   position: absolute;
-  margin: 1px 4px;
+  margin: 1px 8px;
 }
 
 .tooltip {
@@ -638,6 +715,32 @@ footer {
   bottom: 1rem;
   opacity: 1;
 }
+
+ol, ul {
+  padding-inline-start: 1.5rem;
+}
+
+ol, li {
+font-family: var(--primary-font);
+font-weight: 700;
+margin-top: 2rem;
+}
+
+ol p {
+  font-family: var(--primary-font);
+  font-weight: 400;
+}
+
+ul li {
+  font-family: var(--primary-font);
+  font-weight: 400;
+  margin:0.5rem 0;
+  list-style-type: disc;
+}
+
+/* ul li::marker {
+  color: var(--primary-color);
+} */
 
 #scroll-up-parent {
   position: fixed;
@@ -677,14 +780,14 @@ footer {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 729px) {
+@media only screen and (min-width: 829px) {
   .nav,
   .footer-content {
-    padding: 32px 48px 24px 48px;
+    padding: 2rem 2rem 4rem;
   }
 }
 
-@media only screen and (max-width: 728px) {
+@media only screen and (max-width: 828px) {
   #singlePost {
     max-width: 780px;
     text-align: left;
@@ -706,12 +809,24 @@ footer {
   #scroll-up-parent:hover #scroll-up {
     border-color: var(--white);
   }
+
+  h1 {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
 }
 
-@media only screen and (max-width: 728px) and (min-width: 531px) {
+
+@media only screen and (max-width: 828px) and (min-width: 531px) {
   .nav,
   .footer-content {
-    padding: 32px 24px 24px 24px;
+    padding: 2rem 2rem 4rem;
   }
 }
 
@@ -719,15 +834,15 @@ footer {
   .nav {
     flex-direction: column !important;
     padding: 32px 24px 24px;
-    gap: 32px;
+    gap: 1.5rem;
   }
 
   .download {
-    background-position: 4rem 0.2rem;
+    background-position: 4.2rem 0.2rem;
   }
 
   .footer-content {
-    padding: 32px 24px 24px;
+    padding: 4rem 2rem 4rem;
   }
 }
 
