--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@
 
 
 @font-face {
-  font-display: auto;
+  /* font-display: auto; */
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -25,7 +25,7 @@
        url('../fonts/inter-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */}
 
 @font-face {
-  font-display: auto;
+  /* font-display: auto; */
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
@@ -35,7 +35,7 @@
 }
 
 @font-face {
-  font-display: auto;
+  /* font-display: auto; */
   font-family: 'Inter';
   font-style: italic;
   font-weight: 400;
