Added fall back font

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,7 +6,7 @@
   --scroll-track: #00000016;
   --white: #fff;
   --light-grey: #EEE5E9;
-  --primary-font:"Inter";
+  --primary-font:"Inter", Arial, sans-serif;
 }
 
 *,
