--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #F11CDC;
+  --primary-color: #f11cdc;
   --secondary-color: #EEEEEE;
   --primary-text-color: #383D3B;
   --secondary-text-color: #7B7B7B;
@@ -37,8 +37,8 @@
   font-style: italic;
   font-weight: 400;
   src: 
-    url('../fonts/Inter-Italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('../fonts/Inter-Italic.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+    url('../fonts/Inter-Italic.woff2') format('woff2'), 
+    url('../fonts/Inter-Italic.woff') format('woff'); 
 }
 
 html {
@@ -93,6 +93,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  text-wrap: pretty;
 }
 
 h1 {
@@ -104,14 +105,14 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  line-height: 3rem;
+  line-height: 2.625rem;
   font-family: var(--primary-font);
   font-weight: 900;
   margin: 4rem 0 1rem;
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-family: var(--primary-font);
   line-height: 2rem;
 }
@@ -132,15 +133,13 @@ p.description {
 }
 
 figcaption{
-  margin-top:1rem;
+  /* margin-top:1rem; */
   font-size:1rem;
   font-family: var(--primary-font);
-  font-style: italic;
 }
 
 figcaption a {
   margin-left: 0.3rem;
-  font-style: normal;
 }
 
 p {
@@ -206,7 +205,7 @@ figure {
 #singlePost img {
   display: block;
   margin: 0 auto;
-  max-width: 680px;
+  max-width: 780px;
 }
 
 .post-stats {
@@ -308,8 +307,8 @@ a:hover {
 .post-type {
   border-radius: 13px;
   font-family: var(--primary-font);
-  font-size: 16px;
-  line-height:16px;
+  font-size: 1rem;
+  line-height:1rem;
   color: var(--primary-text-color);
   background-color: var(--secondary-color);
   padding: .3rem .6rem !important;
@@ -791,6 +790,10 @@ ul li {
     padding: 2rem 24px 4rem;
   }
 
+  .nav_links {
+   gap:2rem;
+  }
+
   #singlePost {
     max-width: 100%;
     padding-left: 24px;
@@ -817,11 +820,38 @@ ul li {
   .footer-content {
     padding: 4rem 24px 4rem;
   }
+  .callout {
+    flex-direction:column;
+    gap: 0.2rem;
+  }
+  
+  .callout::before{
+    align-self: center;
+    background-position-y: center;
+  }
 }
 
 @media only screen and (max-width: 335px) {
   .nav_links {
     gap: unset;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
+  .post-stats{
+    font-size: 0.8rem;
+    line-height: 0.8rem;
+}
+.post-type{
+  font-size: 0.8rem;
+  line-height: 0.8rem;
+  }
+.callout {
+  flex-direction:column;
+  gap: 0.2rem;
+}
+
+.callout::before{
+  align-self: center;
+  background-position-y: center;
+}
+
 }
