--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,7 +6,7 @@
   --scroll-track: #00000016;
   --white: #fff;
   --light-grey: #EEE5E9;
-  --primary-font:"Inter", Arial, sans-serif;
+  --primary-font: "Inter";
 }
 
 *,
@@ -15,51 +15,43 @@
   box-sizing: inherit;
 }
 
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
+.inter-custom {
+  font-family: var(--primary-font);
+  font-optical-sizing: auto;
   font-weight: 400;
-  src: 
-    url('../fonts/Inter-Regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('../fonts/Inter-Regular.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */}
+  font-style: normal;
+  font-variation-settings: "slnt" 0;
+}
+
+/* @font-face {
+  font-family: 'Inter';
+  font-weight: 400;
+  src:
+    url('../fonts/Inter-Regular.woff2') format('woff2'),
+    url('../fonts/Inter-Regular.woff') format('woff');
+}
 
 @font-face {
   font-family: 'Inter';
-  font-style: normal;
   font-weight: 700;
-  src: 
-    url('../fonts/Inter-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-    url('../fonts/Inter-700.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+  src:
+    url('../fonts/Inter-700.woff2') format('woff2'),
+    url('../fonts/Inter-700.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Inter';
   font-style: italic;
   font-weight: 400;
-  src: 
-    url('../fonts/Inter-Italic.woff2') format('woff2'), 
-    url('../fonts/Inter-Italic.woff') format('woff'); 
-}
+  src:
+    url('../fonts/Inter-Italic.woff2') format('woff2'),
+    url('../fonts/Inter-Italic.woff') format('woff');
+} */
 
 html {
   box-sizing: border-box;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
-}
-
-#container {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  position: relative;
-  min-height: 100vh;
-  background-color: var(--white);
-  background: url(../images/pattern.png) repeat;
-  background-size: 60px;
-}
-
-#container:has(#singlePost) {
-  overflow-x: hidden;
 }
 
 /* width */
@@ -88,7 +80,6 @@ body {
   font-size: 1.25rem;
   line-height: 1.875rem;
   letter-spacing: -0.020625rem;
-  font-family: var(--primary-font);
   color: var(--primary-text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -96,9 +87,25 @@ body {
   text-wrap: pretty;
 }
 
+#container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  position: relative;
+  min-height: 100vh;
+  background-color: var(--white);
+  background: url(../images/pattern.png) repeat;
+  background-size: 60px;
+}
+
+#container:has(#singlePost) {
+  overflow-x: hidden;
+}
+
 h1 {
   font-size: 2.625rem;
-  line-height: 3rem;;
+  line-height: 3rem;
+  ;
   font-family: var(--primary-font);
   font-weight: 900;
 }
@@ -132,9 +139,9 @@ p.description {
   text-indent: 0 !important;
 }
 
-figcaption{
+figcaption {
   /* margin-top:1rem; */
-  font-size:1rem;
+  font-size: 1rem;
   font-family: var(--primary-font);
 }
 
@@ -149,7 +156,7 @@ p {
 .project-overview p {
   text-indent: 0 !important;
   margin-bottom: 2rem;
-  margin-top:0;
+  margin-top: 0;
 }
 
 .overview-item:last-child p {
@@ -203,16 +210,16 @@ figure {
 }
 
 .video-container {
-  position:relative;
+  position: relative;
   width: 100%;
-  height:0;
-  padding-bottom:56.25%;
+  height: 0;
+  padding-bottom: 56.25%;
 }
 
 .video-container iframe {
-  position:absolute;
-  top:0;
-  left:0;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -282,7 +289,7 @@ menu {
 }
 
 a {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -325,7 +332,7 @@ a:hover {
   border-radius: 13px;
   font-family: var(--primary-font);
   font-size: 1rem;
-  line-height:1rem;
+  line-height: 1rem;
   color: var(--primary-text-color);
   background-color: var(--secondary-color);
   padding: .3rem .6rem !important;
@@ -583,14 +590,14 @@ span {
   position: relative;
   list-style-type: none;
   padding-left: 2rem;
-  margin:0;
+  margin: 0;
 }
 
 .xpLink li a {
   border-bottom: 1px solid var(--primary-color);
-    font-size: 1rem;
-    line-height: 1rem;
-    vertical-align: top;
+  font-size: 1rem;
+  line-height: 1rem;
+  vertical-align: top;
 }
 
 .more {
@@ -641,7 +648,7 @@ footer {
 }
 
 footer h2 {
-  margin:0 0 1rem;
+  margin: 0 0 1rem;
 }
 
 .footer-content {
@@ -660,7 +667,7 @@ footer h2 {
   width: min-content;
   text-wrap: nowrap;
   white-space: nowrap;
-  
+
 }
 
 .footer-content a:first-of-type::after {
@@ -698,14 +705,16 @@ footer h2 {
   opacity: 1;
 }
 
-ol, ul {
+ol,
+ul {
   padding-inline-start: 1.5rem;
 }
 
-ol, li {
-font-family: var(--primary-font);
-font-weight: 700;
-margin-top: 2rem;
+ol,
+li {
+  font-family: var(--primary-font);
+  font-weight: 700;
+  margin-top: 2rem;
 }
 
 ol p {
@@ -716,7 +725,7 @@ ol p {
 ul li {
   font-family: var(--primary-font);
   font-weight: 400;
-  margin:0.5rem 0;
+  margin: 0.5rem 0;
   list-style-type: disc;
 }
 
@@ -741,7 +750,7 @@ ul li {
   border-radius: 50%;
 }
 
-#scroll-up{
+#scroll-up {
   border: 1px solid var(--white);
   border-width: 0 0 2px 2px;
   width: 10px;
@@ -753,6 +762,7 @@ ul li {
   background-color: var(--white);
   border-color: var(--primary-color);
 }
+
 #scroll-up-parent:hover #scroll-up {
   border-color: var(--primary-color);
 }
@@ -780,15 +790,14 @@ ul li {
     align-self: center;
   }
 
-  
   #singlePost img {
     width: 100%;
     object-fit: contain;
   }
 
   .video-container {
-    width: 100%; 
-    aspect-ratio:16/9;
+    width: 100%;
+    aspect-ratio: 16/9;
     object-fit: contain;
   }
 
@@ -796,6 +805,7 @@ ul li {
     background-color: var(--primary-color);
     border-color: var(--white);
   }
+
   #scroll-up-parent:hover #scroll-up {
     border-color: var(--white);
   }
@@ -818,7 +828,7 @@ ul li {
   }
 
   .nav_links {
-   gap:2rem;
+    gap: 2rem;
   }
 
   #singlePost {
@@ -847,12 +857,13 @@ ul li {
   .footer-content {
     padding: 4rem 24px 4rem;
   }
+
   .callout {
-    flex-direction:column;
+    flex-direction: column;
     gap: 0.2rem;
   }
-  
-  .callout::before{
+
+  .callout::before {
     align-self: center;
     background-position-y: center;
   }
@@ -863,22 +874,24 @@ ul li {
     gap: unset;
     justify-content: space-between;
   }
-  .post-stats{
+
+  .post-stats {
     font-size: 0.8rem;
     line-height: 0.8rem;
-}
-.post-type{
-  font-size: 0.8rem;
-  line-height: 0.8rem;
   }
-.callout {
-  flex-direction:column;
-  gap: 0.2rem;
-}
 
-.callout::before{
-  align-self: center;
-  background-position-y: center;
-}
+  .post-type {
+    font-size: 0.8rem;
+    line-height: 0.8rem;
+  }
 
+  .callout {
+    flex-direction: column;
+    gap: 0.2rem;
+  }
+
+  .callout::before {
+    align-self: center;
+    background-position-y: center;
+  }
 }
