--- a/_includes/under-construction.html
+++ b/_includes/under-construction.html
@@ -43,6 +43,6 @@
   <h1>Under Construction</h1>
   <p>We're working hard to bring you something awesome. Stay tuned!</p>
 </div>
-
+{% include hotjar.html %}
 </body>
 </html>
