--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="theme-color" content="#F11CDC" />
     <title>Anna Kozh - {{page.title}}</title>
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/Inter-700.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/Inter-900.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="icon" sizes="152x152" type="image/png" href="{{site.baseurl}}/assets/images/favicon152x152.png">
     <link rel="icon" sizes="32x32" type="image/png" href="{{site.baseurl}}/assets/images/favicon32x32.png">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/custom.css">
