--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="theme-color" content="#F11CDC" />
     <title>Anna Kozh - {{page.title}}</title>
+    <meta name="description" content="Senior Product Designer and Storyteller, with over 10 years of experience with large multi-product SaaS platforms." />
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/Inter-700.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/Inter-900.woff2" as="font" type="font/woff2" crossorigin>
@@ -35,10 +36,10 @@
                 <li class="nav-item">
                     <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
                 </li>
-                <li class="nav-item icon download">
+                <!-- <li class="nav-item icon download">
                     <a class="resume-placeholder " href="" alt="Download resume">
                         R&#233sum&#233</a>
-                </li>
+                </li> -->
             </menu>
         </div>
     </div>
