--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,10 +31,13 @@
             </li>
             <menu class="nav_links">
                 <li class="nav-item">
-                    <a aria-current="page" href="{{site.baseurl}}/">Portfolio</a>
+                    <a aria-current="page" href="{{site.baseurl}}/portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a aria-current="page" href="{{site.baseurl}}/blog.html">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a aria-current="page" href="{{site.baseurl}}/about.html">About</a>
                 </li>
                 <!-- <li class="nav-item icon download">
                     <a class="resume-placeholder " href="" alt="Download resume">
