--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,6 @@
 :root {
   --primary-color: #f11cdc;
-  --secondary-color: #EEEEEE;
+  --secondary-color: #ededf3;
   --primary-text-color: #383D3B;
   --secondary-text-color: #7B7B7B;
   --scroll-track: #00000016;
@@ -36,6 +36,17 @@
     url('../fonts/Inter-700.woff2') format('woff2'),
     /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
     url('../fonts/Inter-700.woff') format('woff');
+  /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  src:
+    url('../fonts/Inter-500.woff2') format('woff2'),
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    url('../fonts/Inter-500.woff') format('woff');
   /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
 }
 
@@ -208,6 +219,7 @@ strong {
   max-width: 780px;
   text-align: left;
   align-self: center;
+  margin-top:2rem;
 }
 
 #singlePost p {
@@ -247,14 +259,15 @@ figure {
 
 .post-stats {
   display: flex;
-  gap: .6rem;
+  gap: .5rem;
   justify-content: left;
   align-items: center;
   color: var(--secondary-text-color);
   text-transform: uppercase;
   font-family: var(--primary-font);
-  font-size: 1rem;
-
+  font-weight: 500;
+  font-size: 0.8rem;
+  letter-spacing: -0.1px;
 }
 
 .navbar {
@@ -355,11 +368,13 @@ a:hover {
 .post-type {
   border-radius: 13px;
   font-family: var(--primary-font);
-  font-size: 1rem;
+  font-size: 0.75rem;
+  font-weight: 500;
   line-height: 1rem;
   color: var(--primary-text-color);
   background-color: var(--secondary-color);
   padding: .3rem .6rem !important;
+  letter-spacing: 0.15px;
   width: max-content;
   text-transform: none;
 }
@@ -973,6 +988,7 @@ ul li {
     max-width: 100%;
     padding-left: 24px;
     padding-right: 24px;
+    margin-top:2rem;
   }
 }
 
@@ -990,6 +1006,7 @@ ul li {
   #singlePost {
     padding-left: 24px;
     padding-right: 24px;
+    margin-top:2rem;
   }
 
   .footer-content {
@@ -1016,11 +1033,13 @@ ul li {
   .post-stats {
     font-size: 0.8rem;
     line-height: 0.8rem;
+    letter-spacing: -0.1px;
   }
 
   .post-type {
-    font-size: 0.8rem;
-    line-height: 0.8rem;
+    font-size: 0.75rem;
+    line-height: 0.75rem;
+    font-weight: 500;
   }
 
   .callout {
